# tables_io

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  do_cover.sh  environment.yml  pyproject.toml  requirements.txt  setup.py  test_outmd.parquet
.github/: environment.yml
.github/workflows/: linting.yml  pypi.yaml  python-package.yml  smoke-test.yml  testing-and-coverage.yml
docs/: .quickstart.md.swp  acknowledgements.md  conf.py  cookbook.md  devdocs.md  devinstall.md  devstyle.md  devtechdebt.md  functionoverview.md  index.rst  install.rst  license.md  mpi.py  quickstart.md  requirements.txt  roadmap.md  tables_io.rst
docs-old/: conf.py  install.rst
docs/notebooks/: hdf5_iter_example.ipynb  index.md  index.rst  multipleWriteHdf5_example.ipynb  singleTable_example.ipynb  tableDict_example.ipynb
nb/: .gitignore  hdf5_iter_example.ipynb  multipleWriteHdf5_example.ipynb  singleTable_example.ipynb  tableDict_example.ipynb
src/: .pylintrc
src/tables_io/: __init__.py  arrayUtils.py  cli.py  concatUtils.py  convUtils.py  ioUtils.py  lazy_modules.py  mergeUtils.py  sliceUtils.py  tableDict.py  table_dict.py  testUtils.py  types.py
src/tables_io/conv/: __init__.py  conv_table.py  conv_tabledict.py
src/tables_io/convert/: __init__.py  convMulti.py  convSingle.py  convUtils.py  conv_table.py  conv_tabledict.py
src/tables_io/hdf5/: __init__.py
src/tables_io/io/: ioUtils.py
src/tables_io/ioUtils/: __init__.py  ioUtils.py  read.py  readIterator.py  write.py
src/tables_io/io_utils/: __init__.py  iterator.py  read.py  write.py
src/tables_io/utils/: __init__.py  array_utils.py  concatUtils.py  concat_utils.py  sliceUtils.py  slice_utils.py
tables_io/: __init__.py  arrayUtils.py  convUtils.py  ioUtils.py  io_layer.py  lazy_modules.py  mpUtils.py  tableDict.py  tablePlus.py  testUtils.py  types.py
tests/: check_mpi.py  conftest.py  test_cli.py  test_concat.py  test_conv.py  test_fileIO.py  test_io.py  test_io_layer.py  test_lazy_modules.py  test_plus.py  test_table_dict.py  test_testing.py  test_types.py  test_utils.py  testing.ipynb
tests/conv/: test_conv_table.py  test_conv_tabledict.py
tests/convert/: test_conv_table.py  test_conv_tabledict.py
tests/data/: concat.hdf5  csv_test.csv  fits_nonames.fits  fits_repeated_names.fits  index_file.idx  test.idx
tests/io_utils/: conftest.py  test_io_classic.py  test_iterator.py  test_read.py  test_write.py
tests/utils/: test_array_utils.py  test_concat_utils.py  test_slice_utils.py
