[project]
name = "tables-io"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
description = "Input/output and conversion functions for tabular data"
authors = [
    { name = "LSST Dark Energy Science Collaboration (DESC)", email = "echarles@slac.stanford.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.21.0",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
full = [
    "astropy",
    "tables",
    "h5py>=2.9",
    "pandas",
    "pyarrow",
]
dev = [
    "astropy",
    "h5py>=2.9",
    "pandas",
    "pyarrow",
    "mpi4py",
    "coverage",
    "pylint",
    "pytest",
    "pytest-cov",
    "flake8",
    "jax",
    "jaxlib",
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx", # Used to automatically generate documentation
    "sphinx_rtd_theme", # Used to render documentation
    "sphinx-autoapi", # Used to automatically generate api documentation
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/tables_io/_version.py"

[tool.pylint]
disable = [
    "abstract-method",
    "invalid-name",
    "too-many-statements",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "use-dict-literal",
    "broad-exception-caught",
]
max-line-length = 110
max-locals = 50
max-branches = 25
max-public-methods = 50
max-module-lines = 1500

[tool.isort]
profile = "black"
line_length = 110

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--cov=tables_io",
    "--cov-report=html"
]
#flake8-ignore = "E203"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
